Correction version mobile cartes activités qui prennent toute la largeur

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -367,7 +367,6 @@ h1 {
     height: 124px;
     border-radius: 20px 20px 0px 0px;
     border: 5px #FFFFFF solid;
-    object-fit: cover;
 }
 
 .card-main-txt {
@@ -448,7 +447,6 @@ h1 {
     border-top: 5px #FFFFFF solid;
     border-bottom: 5px #FFFFFF solid;
     border-left: 5px #FFFFFF solid;
-    object-fit: cover;
 }
 
 .card-main-txt-2 {
@@ -862,7 +860,6 @@ footer a {
 
     .card-main {
         width: 100%;
-        max-width: 400px;
         margin: 0px auto
     }
 
@@ -883,7 +880,6 @@ footer a {
 
     .card-activite {
         width: 100%;
-        max-width: 400px;
         height: 200px;
         margin: 0px auto;
     }
